[package]
name = "dydx-v4-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is-url = "1.0.4"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
